--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,6 +41,10 @@ application.langs="en"
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
 
+# ReactiveMongo Plugin Config
+mongodb.servers = ["localhost:27017"]
+mongodb.db = "whai"
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
