some secure social plugins were added

--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -1,8 +1,17 @@
-securesocial {
-  onLoginGoTo=/
-  onLogoutGoTo=/login
+smtp {
+  host = smtp.gmail.com
+  #port=25
+  ssl = true
+  user = "yurasusuk"
+  password = "mnlbmw13"
+  from = "yurasusuk@gmail.com"
+}
 
-  ssl=false
+securesocial {
+  onLoginGoTo = /
+  onLogoutGoTo = /login
+
+  ssl = false
 
   cookie {
     #name=id
@@ -15,21 +24,21 @@ securesocial {
 }
 
 userpass {
-  withUserNameSupport=false
-  sendWelcomeEmail=true
-  enableGravatarSupport=true
-  signupSkipLogin=true
-  tokenDuration=60
-  tokenDeleteInterval=5
-  minimumPasswordLength=8
-  enableTokenJob=true
-  hasher=bcrypt
+  withUserNameSupport = false
+  sendWelcomeEmail = true
+  enableGravatarSupport = true
+  signupSkipLogin = true
+  tokenDuration = 60
+  tokenDeleteInterval = 5
+  minimumPasswordLength = 8
+  enableTokenJob = true
+  hasher = bcrypt
 }
 
 google {
-  authorizationUrl="https://accounts.google.com/o/oauth2/auth"
-  accessTokenUrl="https://accounts.google.com/o/oauth2/token"
-  clientId=96785256749-jc343djfhcq66osgg7h1mpk539bm4ffr.apps.googleusercontent.com
-  clientSecret=cJiOu8-dlmc7LlNr_pj2Wjzi
-  scope="https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email"
+  authorizationUrl = "https://accounts.google.com/o/oauth2/auth"
+  accessTokenUrl = "https://accounts.google.com/o/oauth2/token"
+  clientId = "96785256749-jc343djfhcq66osgg7h1mpk539bm4ffr.apps.googleusercontent.com"
+  clientSecret = "cJiOu8-dlmc7LlNr_pj2Wjzi"
+  scope = "https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email"
 }
