items were introduced

--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -42,3 +42,32 @@ google {
   clientSecret = "cJiOu8-dlmc7LlNr_pj2Wjzi"
   scope = "https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email"
 }
+
+facebook {
+  authorizationUrl="https://graph.facebook.com/oauth/authorize"
+  accessTokenUrl="https://graph.facebook.com/oauth/access_token"
+  clientId=your_client_id
+  clientSecret=your_client_secret
+  # this scope is the minimum SecureSocial requires.  You can add more if required by your app.
+  scope=email
+}
+
+twitter {
+  requestTokenUrl="https://twitter.com/oauth/request_token"
+  accessTokenUrl="https://twitter.com/oauth/access_token"
+  authorizationUrl="https://twitter.com/oauth/authenticate"
+  consumerKey=KTjZ6vYfuRZz7geEA1IMypGri
+  consumerSecret=hqfTeZTkGYbRl6kmCWNV7l7WBAJz0mFLzDxejYXKWFKqjp3iOK
+}
+
+linkedin {
+  requestTokenUrl="https://api.linkedin.com/uas/oauth/requestToken"
+  accessTokenUrl="https://api.linkedin.com/uas/oauth/accessToken"
+  authorizationUrl="https://api.linkedin.com/uas/oauth/authenticate"
+  consumerKey=77mkr5zuu6yxj9
+  consumerSecret=wwdfXGIMaV9p0IM2
+  # user token
+  # d7f4b045-1ae0-4f81-9cc1-32c7c9640e9e
+  # user secret
+  # 1f595f1b-e181-4054-88a9-e15f9f93e2cb
+}
